Updated Remove () to A] add removeFirst() method to card game Java tab